# daisybed

./: CMakeLists.txt  README.md  package.json
src/: Voice.cpp  Voice.h  awful-paraphonic.cpp  basic-midi.cpp  knob.cpp  knob.h  main.cpp
